<resources>
    <string name="app_name">Share Easy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Share Easy App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="signup_prompt">Don\'t have an account yet?</string>
    <string name="register_text">Register</string>
    <string name="login_prompt">Already have an account login?</string>

    <string name="description_hint">Description…</string>
    <string name="name_hint">Name:</string>

    <string name="menu_products">Donated Items</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_about">About Us</string>


    <string name="logout_text">logout</string>
    <string name="home_text">Home</string>
    <string name="profile_text">Profile</string>
    <string name="user_avatar_text">User Avatar</string>
    <string name="services_text">Services</string>
    <string name="products_text">Donated Items</string>
    <string name="notifications_text">Notifications</string>
    <string name="about_us_text">About Us</string>
    <string name="get_started_text">MAKE DONATIONS</string>
    <string name="donated_items_question">What are you donating?</string>
    <string name="select_items_hint">Select items…</string>
    <string name="next_text">Next</string>
    <string name="add_phone_text">Add Phone Number</string>

    -
    <string-array name="donated_items">
        <item>CLOTHES</item>
        <item>FOOD</item>
        <item>SHOES</item>
        <item>MONEY</item>
        <item>MEDICINE</item>
        <item>MISCELLANEOUS ITEMS</item>
    </string-array>

    -
    <string-array name="institution">
        <item> HURUMA WIDOWS AND WIDOWER</item>
        <item> NAIROBI CHILDREN HOME</item>
        <item> LAIKIPIA SCHOOL OF BLIND</item>
        <item> UMOJA HOSPITAL</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name_hint">Display Name:Not set</string>
    <string name="not_verified_text">Not Verified</string>
    <string name="setup_account_text">Setup Account</string>
    <string name="display_name">Display Name</string>
    <string name="update_account">Update Account</string>
    <string name="application_logo">Application Logo</string>
    <string name="request_permission">Request Permission</string>
    <string name="request_permission_explanation">This Application needs permission to access device location, call manager, gallery and other stuff that will be shown in the following dialogs to provide required services, Please Allow the permission</string>
    <string name="grant_permission_text">Allow Permission</string>
    <string name="search_location_text">Tap on Your Location to move the Pin… </string>
    <string name="item_text">Item</string>
    <string name="item_type_text">Item Type</string>
    <string name="skip_text">Skip</string>
    <string name="select_institution_text">Select institution…</string>
    <string name="institution_quiz_prompt">do you like to donate to these marginalized institution ?</string>
    <string name="institution_spinner_prompt">Select institution you want to donate to…</string>
    <string name="donated_items_text">Donated Items</string>
    <string name="location_text">Location</string>
    <string name="location_loading_text">Location Loading…</string>
    <string name="item_type_loading_text">Item Type Loading…</string>
    <string name="description_text">Description</string>
    <string name="description_loading_text">Description Loading…</string>
    <string name="institution_text">Institution</string>
    <string name="institution_loading_text">Institution Loading…</string>
    <string name="call_agent_text">Call Agent</string>
    <string name="account_circle_text">Account Circle</string>
    <string name="contact_text">Contact</string>
    <string name="selected_services_text">Selected Services</string>
    <string name="selected_products_text">Selected Products</string>
    <string name="send_request_text">Send Request</string>
    <string name="no_institution">No institution Selected</string>
    <string name="item_name_text">Item Name</string>
    <string name="donated_items_loading">Donated items loading</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">to be update...</string>

    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="logout_title">Logout</string>
    <string name="account">Account</string>
    <string name="go_back">BACK</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="resetpass">Forgot password? Reset Here!</string>
    <string name="element_text">list</string>
    <string name="services_list">Services list loading</string>
    <string name="UpdateSuccess">Details has been Successfully Updated, close the app and Launch again</string>
    <string name="UpdateFail">Failedd!! Please Try Again. If Persist, Contac Customer care.</string>
    <string name="UploadFailed">Image was not Uploaded, kindly check for your Internet connection and try again. If persist , Contact Customer care</string>


</resources>