<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/profile_text" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/services_text" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout_title"
            android:icon="@drawable/ic_logout"
            />
    </group>
</menu>