<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

        <RelativeLayout
            android:id="@+id/top_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_civ"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/user_avatar_text"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account_circle_white"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/display_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/avatar_civ"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/display_name_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email_text"
            android:padding="4dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_relative_layout" />

        <TextView
            android:id="@+id/email_not_verified_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:text="@string/not_verified_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="@id/email_tv"
            app:layout_constraintTop_toBottomOf="@id/email_tv" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:text="@string/add_phone_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_not_verified_tv" />

    <TextView
        android:id="@+id/change_password_txt"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/colorPrimary"
        android:icon="@drawable/ic_change_password"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_account_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/setup_account_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>