<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.RequestPermissionActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo_civ"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/request_permission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_civ"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/request_permission"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/request_permission_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/request_permission_title"
        android:layout_marginTop="16dp"
        android:text="@string/request_permission_explanation"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <Button
        android:id="@+id/grant_permission_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/grant_permission_text"
        android:textAllCaps="false" />
</RelativeLayout>